zabbix-ha/base/mysql-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zabbix-mysql
spec:
  serviceName: zabbix-mysql
  replicas: 1
  selector: { matchLabels: { app: zabbix-mysql } }
  template:
    metadata: { labels: { app: zabbix-mysql } }
    spec:
      containers:
        - name: zabbix-mysql
          image: mysql:8.0
          args: ["--default-authentication-plugin=mysql_native_password",
                 "--sql_mode=STRICT_TRANS_TABLES,ERROR_FOR_DIVISION_BY_ZERO,NO_ENGINE_SUBSTITUTION",
                 --log-bin-trust-function-creators=1,
                 "--character-set-server=utf8mb4",
                 "--collation-server=utf8mb4_bin"]
          ports: [{ containerPort: 3306, name: zabbix-mysql }]
          volumeMounts: [{ name: data, subPath: data, mountPath: /var/lib/mysql }]
          readinessProbe: { tcpSocket: { port: 3306 }, initialDelaySeconds: 60, periodSeconds: 5 }
  volumeClaimTemplates:
    - metadata: { name: data }
      spec:
        accessModes: ["ReadWriteOnce"]
        resources: { requests: { storage: 20Gi } }
