zabbix-ha/base/zabbix-web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: zabbix-web
spec:
  selector: { app: zabbix-web }
  ports: [{ name: http, port: 80, targetPort: 8080 }]
